Closed Bug 849174 Opened 11 years ago Closed 11 years ago

inline function declared as dllimport warning js jsfriendapi.h

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
This is noisy in mingw builds and there is no reason to export an empty inline function.
Attachment #722721 - Flags: review?(bobbyholley+bmo)
Comment on attachment 722721 [details] [diff] [review]
fix

Hm, I think I did it this way so that it would match the |friend| declaration in AutoEnterPolicy (near the bottom of jsproxy.h). However, it looks like that's in an #ifdef DEBUG block. There might have been another reason, but I don't remember.

Please do a "try: -b do -p all -u none -t none" run before landing this. r=bholley if it builds on all platforms.
Attachment #722721 - Flags: review?(bobbyholley+bmo) → review-
Comment on attachment 722721 [details] [diff] [review]
fix

Err, s/-/+/
Attachment #722721 - Flags: review- → review+
Thanks for the review. It seems green on try:

https://tbpl.mozilla.org/?tree=Try&rev=46e7e0428e3c

(I'm still waiting for win debug build, but that one shouldn't be affected).
https://hg.mozilla.org/mozilla-central/rev/c9924ded22f2
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: