Bug 849174 - inline function declared as dllimport warning js jsfriendapi.h r=bholley