js/src/jsfriendapi.h
@@ -1418,7 +1418,7 @@ class JS_FRIEND_API(AutoCTypesActivityCallback) {
 extern JS_FRIEND_API(void)
 assertEnteredPolicy(JSContext *cx, JSObject *obj, jsid id);
 #else
-inline JS_FRIEND_API(void) assertEnteredPolicy(JSContext *cx, JSObject *obj, jsid id) {};
+inline void assertEnteredPolicy(JSContext *cx, JSObject *obj, jsid id) {};
 #endif
 
 } /* namespace js */
